# yzi4d-backend

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  manage.py  pyproject.toml
.github/workflows/: tests-linters.yml
app/: container.py
app/adapters/: source.py
app/adapters/storage/: analyzes.py  consultations.py  contacts.py  documents.py  licenses.py  news.py  pages.py  promotions.py  services.py  specialists.py  updater.py
app/adapters/storage/db/: base_model.py  engine.py  session.py
app/adapters/storage/models/: __init__.py  analyzes.py  callbacks.py  consultations.py  contacts.py  departments.py  documents.py  licenses.py  news.py  offices.py  pages.py  promotions.py  services.py  specialists.py  updates.py  users.py
app/adapters/storage/pagination/: query.py
app/api/: factory.py  handlers.py  middlewares.py  templates.py
app/api/admin/: __init__.py  auth.py  factory.py  permissions.py
app/api/admin/routers/: analyzes.py  callbacks.py  consultations.py  contacts.py  departments.py  documents.py  licenses.py  news.py  offices.py  pages.py  promotions.py  services.py  specialists.py  updates.py  users.py
app/api/routers/: analyzes.py  index.py  news.py  offices.py  pages.py  promotions.py  services.py  specialists.py  updates.py
app/api/v1/: __init__.py  factory.py  handlers.py
app/api/v1/routers/: analyzes.py  consultations.py  contacts.py  documents.py  index.py  licenses.py  news.py  offices.py  pages.py  promotions.py  services.py  specialists.py  updates.py
app/domain/entities/: analyzes.py  callbacks.py  consultations.py  contacts.py  documents.py  news.py  pages.py  patients.py  promotions.py  services.py  specialists.py  specializations.py  vacancies.py
app/domain/services/: exceptions.py
app/domain/services/schemas/: consultations.py  contacts.py  news.py  pages.py  promotions.py
app/domain/services/updater/: repo.py
app/domain/services/updater/schemas/: contacts.py  services.py  specialists.py
app/infrastructure/adapters/: patients.py  source.py
app/infrastructure/adapters/storage/: callbacks.py  consultations.py  contacts.py  documents.py  news.py  pages.py  promotions.py  services.py  specialists.py  specializations.py  updater.py  vacancies.py
app/infrastructure/adapters/storage/db/: engine.py  session.py
app/infrastructure/settings/: api.py  auth.py  db.py  server.py  service.py
app/presentation/api/: factory.py  handlers.py  middlewares.py
app/presentation/api/admin/: __init__.py  auth.py  factory.py
app/presentation/api/auth/: dependecies.py  schemas.py  security.py
app/presentation/api/v1/: __init__.py  factory.py  handlers.py
app/services/: exceptions.py
app/services/auth/: backend.py
app/services/schemas/: analyzes.py  consultations.py  documents.py  licenses.py  news.py  offices.py  pages.py  promotions.py  services.py  specialists.py
app/services/types/: consultations.py
app/services/updater/: repo.py  types.py
app/services/updater/schemas/: services.py  specialists.py
app/settings/: auth.py  db.py  server.py  service.py  uvicorn.py
app/static/blind/js/: bvi.js  bvi.min.js
app/static/css/: style.min.css
app/static/js/: app.js  bootstrap.js  maps.js
app/templates/main/: analyzes.html  base.html  contacts.html  index.html  licenses.html  office.html  promotions.html  service.html  services.html  specialist.html  specialists.html
app/templates/main/includes/: calc.html  callback.html  footer.html  head.html  header.html  maps.html  offcanvas.html  offices.html  pagination.html  scripts.html  scroll-to-top.html  specialist_card.html
app/templates/sqladmin/: create.html  edit.html  list.html
cicd/: Dockerfile  docker-compose.local.yml  docker-compose.yml
cicd/frontend/: Dockerfile
cicd/nginx/: Dockerfile  nginx.conf
cli/: __main__.py  migrations.py  start.py
infrastructure/: docker-compose.yml
infrastructure/app/: Dockerfile
infrastructure/nginx/: Dockerfile
migrations/: alembic.ini  env.py
migrations/versions/: 2022_10_17_1256-74b3c392d767_init.py  2022_10_17_1300-3b383c106c61_renamed_message_in_callbacks.py  2022_10_18_1305-a253537e2498_modified_page_model.py  2022_12_25_1351-4a7cdbf0969f_offices.py  2022_12_25_1535-2f0eaea88e68_office3.py  2022_12_25_1554-3813bc49ebc7_office4.py  2023_01_14_1245-0fb73dc4a411_spec_name.py  2023_01_14_1427-c897cf1f6b25_spec_titules.py  2023_01_28_1257-f485efa94761_sqlalchemy_2_0.py  2023_02_04_1552-5cc888a799dc_specialsts_certificates.py  2023_02_04_1729-aa11cc4ab6e7_specialsts_online.py  2023_02_09_1041-dc764bf5bb06_work_with_services.py  2023_02_09_1500-44ec22f02284_work_with_services.py  2023_02_16_1040-a5e06e2725cd_work_with_news.py  2023_02_16_1042-cd38cad7acb9_work_with_news.py  2023_02_16_1132-9afd68c7b708_work_with_promotions.py  2023_02_16_1200-46a184094ef4_work_with_promotions.py  2023_02_16_1219-977d2f7c0fd5_work_with_promotions.py  2023_02_16_1431-f1ef76913394_work_with_departments.py  2023_02_16_1506-965e2658f216_work_with_1c_specialist.py  2023_02_16_1510-1a9e81503d02_work_with_1c_specialist.py  2023_02_16_1516-b92ed5bd24bb_work_with_1c_specialist.py  2023_02_16_1649-af9d19e859b3_migration_message.py  2023_02_18_1151-ea5bbe9400e5_migration_message.py  2023_09_17_1519_d4e5bcf41a8b_initial_commit.py  2023_09_24_1537_a3437ea341a0_initial_commit.py  2023_09_24_2153_c4111d1f52b3_initial_commit.py  2023_09_30_1418_6f80eb4b2f97_initial_commit.py  2023_09_30_1520_6e575ffe937f_initial_commit.py  2023_09_30_2139_474c05a45c22.py  2023_11_06_1250_2297a981bce1.py  2023_11_06_1323_15165703b82e.py  2023_12_02_1614_65d98c13d263.py  2023_12_23_1051_b418025ad13e.py  2023_12_23_1101_82105c470f83.py  2024_04_09_0948_11ef79646f2f.py  2024_04_15_1443_cc26a3e9bfb6.py  2024_04_20_1203_5ed7d16857f7.py  2024_04_26_1053_333ea772d30b.py  2024_04_30_1159_b5e916142ee2.py
utils/: chunks.py  constants.py
utils/admin/: files.py  formats.py
utils/settings/: base.py
utils/template_filters/: humanize.py
(+38 files in other folders)
