[tool.poetry]
name = "clinic"
version = "1.2.0"
description = ""
authors = [
    "AsuraBot <homecat13@gmail.com>",
    "GurgenXD <gurgen.abramyan.1995@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.2"
uvicorn = { extras = ["standard"], version = "0.27.1" }
click = "8.1.7"
SQLAlchemy = { extras = ["asyncio"], version = "2.0.25" }
alembic = "1.13.1"
pydantic = { extras = ["dotenv"], version = "2.6.1" }
asyncpg = "0.29.0"
sqladmin = { extras = ["full"], version = "0.16.0" }
dependency-injector = "4.41.0"
loguru = "0.7.2"
pydantic-settings = "2.1.0"
itsdangerous = "2.1.2"
httpx = "0.26.0"
fastapi-storages = "0.2.1"
python-jose = "3.3.0"
tzdata = "2023.4"
pillow = "10.2.0"

[tool.poetry.group.dev.dependencies]
black = "24.1.1"
mypy = "1.8.0"
ruff = "0.2.1"
greenlet = { version = "3.0.3", markers = "sys_platform == 'darwin'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311"]
skip-magic-trailing-comma = true

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true

[[tool.mypy.overrides]]
module = "wtforms.fields.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["ALL"]
ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF012",
    "D104",
    "D100",
    "D107",
    "COM812",
    "ANN101",
    "D106",
    "A002",
    "A003",
    "FBT003",
    "D105",
    "TCH003",
    "TCH002",
    "D203",
    "D213",
    "UP017",
    "FBT001",
    "ANN401",
    "FBT002",
    "ANN102",
    "G004",
    "PGH003",
    "S602",
    "S311",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"migrations/versions/*.py" = ["D103"]

[tool.ruff.isort]
lines-after-imports = 2

[tool.ruff.pylint]
max-args = 10
