[tool.poetry]
name = "clinic"
version = "1.2.0"
description = ""
authors = [
    "AsuraBot <homecat13@gmail.com>",
    "GurgenXD <gurgen.abramyan.1995@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.2"
uvicorn = { extras = ["standard"], version = "0.27.1" }
click = "8.1.7"
SQLAlchemy = { extras = ["asyncio"], version = "2.0.25" }
alembic = "1.13.1"
pydantic = { extras = ["dotenv"], version = "2.6.1" }
asyncpg = "0.29.0"
sqladmin = { extras = ["full"], version = "0.16.0" }
dependency-injector = "4.41.0"
loguru = "0.7.2"
pydantic-settings = "2.1.0"
itsdangerous = "2.1.2"
httpx = "0.26.0"
fastapi-storages = "0.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
tzdata = "2023.4"
pillow = "10.2.0"
password-validator = "^1.0"

[tool.poetry.group.dev.dependencies]
black = "24.1.1"
mypy = "1.8.0"
ruff = "0.2.1"
greenlet = { version = "3.0.3", markers = "sys_platform == 'darwin'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311"]
skip-magic-trailing-comma = true

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true

[[tool.mypy.overrides]]
module = "wtforms.fields.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF012",

    "D100",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D213",

    "ANN101",
    "ANN102",

    "G004",

    "TRY003",

    "EM101",
    "EM102"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"migrations/versions/*.py" = ["D103"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.format]
skip-magic-trailing-comma = true
